--- a/style.css
+++ b/style.css
@@ -7,6 +7,18 @@ body{
 html{
     background-color:rgba(169, 169, 169, 0.973);
 }
+*{
+    margin: 0;
+    padding: 0;
+}
+html, body {
+  overflow-x: hidden; 
+}
+@media (max-width: 768px) {
+  .dashboard-card {
+    width: 100vw;
+  }
+}
 body{
     width:100%;
     height:100%;
