--- a/blogStyle.css
+++ b/blogStyle.css
@@ -1,42 +1,100 @@
-body{
-    background-color: rgb(219, 28, 187);
-    color: black;
-}
-.first{
-    text-align: center;
-    text-decoration: none;
-    width:500px;
-    height:50px;
-    margin-left: 100px;
-    font-size: large;
-    padding-bottom: 39px;
-    
-}
-h1, h2{
-    margin-left: 100px; 
-  font-style: italic;
-}
-.biggerDiv{
-    display: flex;
-    width: 1000px;
-    padding-bottom: 50px;
+body {
+   
+    background-color: lightblue;
+    color: blueviolet;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 20px;
+    margin: 0;
 }
 
-fieldset{
-    text-align: start;
-    height:400px;
-   width:190px;
-   color:rgb(232, 214, 17);
+h1, h2 {
+    margin-left: 100px;
+    font-style: italic;
+    text-align: center;
 }
-.me{
-    width:600px;
-   
+
+h1 {
+    font-size: 2em;
+    margin-bottom: 20px;
 }
-.big{
+
+h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+.first {
+    text-align: left;
+    width: 80%;
+    margin: 0 auto 40px auto;
+    font-size: 1.1em;
+   padding: 20px;
+    
+}
+
+.biggerDiv {
     display: flex;
-    width:100%;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 20px;
+    padding: 20px;
+}
+
+fieldset {
+    text-align: left;
+    min-height: 260px;
+    width: 280px;
+    background-color: white;
+    border: 1px solid #4b0082;
+    border-radius: 8px;
+    padding: 15px;
+}
+
+legend {
+    font-weight: bold;
+    font-size: 1.1em;
+    color: blueviolet;
+    padding: 0 10px;
+}
+
+.me {
+    width: 300px;
+}
+
+.big {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-around;
+    margin: 40px 0;
+}
+
+.bb {
+    background-color: #ffffff;
+    padding: 20px;
+    width: 45%;
+    border: 1px solid #4b0082;
    
 }
-.bb{
-    width: 30%;
+
+button {
+    display: block;
+    margin: 30px auto 0 auto;
+    padding: 10px 20px;
+    background-color: blueviolet;
+    color: lightblue;;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #360062;
+}
+
+button a {
+    color: #fff;
+    text-decoration: none;
 }
