--- a/style.css
+++ b/style.css
@@ -1,96 +1,93 @@
-@media screen and (max-width:800px) {
-body{
-    background-color:rgb(40, 20, 36);
+body {
+    width: 100%;
+    height: 100%;
+    background-color: lightblue;
+    color: blueviolet;
+    font-family: Arial, sans-serif;
+}
 
+#tired {
+    width: 500px;
+    height: 400px;
+    display: block;
+    margin: 0 auto;
 }
+
+h1 {
+    font-size: xx-large;
+    text-align: center;
+    margin-top: 20px;
 }
-html{
-    background-color:rgba(169, 169, 169, 0.973);
+
+.msg {
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    font-size: x-large;
+    margin-bottom: 30px;
 }
-*{
-    margin: 0;
+
+#list-challanges {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
     padding: 0;
+    margin: 0 auto;
+   
 }
-html, body {
-  overflow-x: hidden; 
+
+#list-challanges > div {
+    width: 300px;
+    border: 1px solid burlywood;
+    border-radius: 8px;
+    padding: 15px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
-@media (max-width: 768px) {
-  body {
-    width: 100vw;
-  }
-}
-body{
-    width:100%;
-    height:100%;
-   font-family: 'Baskervville', serif;
-  color: linen;
-  background-color: rgb(20, 30, 40);
-    
-}
-h1{
-    font-family: sans-serif;
-    font-size:xx-large;
-   text-align: center;
-}
-#list-challanges{
-    display:inline-block;
-}
-.skill-gap{
-font-family:  Helvetica, sans-serif;
-display:inline-block;
-   width: 300px;
-}
-li{
-    font-family:Arial, sans-serif;
+
+#list-challanges li {
+    list-style: none;
     font-weight: bold;
-    
+    font-size: 18px;
+    margin-bottom: 8px;
 }
-img {
-    width:150px;
-    height:150px;
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-justify-content: center;
-align-items: center;
-gap: 16px;
-margin: 0 auto;
-padding: 20px 10px;
-}
-.read-more{
-    color:chartreuse;
-    background-color: black;
-    border-radius: 0.5rem ;
-    border: 0.1px solid gray;
-cursor: pointer;
-}
-.read-more:hover{
+
+.skill-gap {
     color: black;
-    background-color: white;
+    font-size: 14px;
+    line-height: 1.5;
 }
-.read-more:active{
-    color:chartreuse;
-    background-color: black;
-    border-radius: 0.5rem ;
-    border: 0.1px solid gray;
+
+.read-more {
+    display: block;
+    margin: 30px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: blueviolet;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
-#tired{
-    width: 250px;
-    height: 200px;
+
+button a {
+    color: white;
+    text-decoration: none;
 }
-.msg{
-    font-size:x-large;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: rgba(169, 169, 169, 0.773);
+
+#see-more {
+    margin-top: 40px;
+    text-align: center;
 }
-p{
-     text-align: center;
+
+#first-div img {
+    width: 300px;
+    margin: 10px;
 }
-div{
-    float: left;
-}
-#solution-strat{
-    color:black;
-    font-style: oblique;
-    font-weight: bolder;
+button{
+    background-color: blueviolet;
+    width:100px;
+    height:50px;
+    border-radius: 30px;
+    border: none;
 }
