--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: lightblue;
-    color: blueviolet;
+    color: black;
     font-family: Arial, sans-serif;
 }
 
@@ -14,9 +14,12 @@ body {
 }
 
 h1 {
-    font-size: xx-large;
+    font-size: 35px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 90px;
+    font-family: "font1", "font2", generic-family;
+    color:black
+
 }
 
 .msg {
@@ -33,11 +36,12 @@ h1 {
     gap: 20px;
     padding: 0;
     margin: 0 auto;
+    
    
 }
 
 #list-challanges > div {
-    width: 300px;
+    width: 400px;
     border: 1px solid burlywood;
     border-radius: 8px;
     padding: 15px;
@@ -61,13 +65,16 @@ h1 {
 .read-more {
     display: block;
     margin: 30px auto;
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: blueviolet;
+    font-size: 15px;
+    background-color: black;
     color: white;
     border: none;
-    border-radius: 5px;
     cursor: pointer;
+    background-color: black;
+    width:100px;
+    height:50px;
+    border-radius: 30px;
+  
 }
 
 button a {
@@ -85,9 +92,25 @@ button a {
     margin: 10px;
 }
 button{
-    background-color: blueviolet;
+    background-color: black;
     width:100px;
     height:50px;
     border-radius: 30px;
     border: none;
+    cursor: pointer;
+}
+#list-challanges > div:hover{
+    background-color: #5aa9e6;
+    color:white;
+    
+}
+#list-challanges p:hover{
+    color: white;
+}
+.topic{
+    display: flex;
+}
+.first-topic{
+    width:50%;
+    text-align: center;
 }
