--- a/blogStyle.css
+++ b/blogStyle.css
@@ -1,7 +1,7 @@
 body {
    
     background-color: lightblue;
-    color: blueviolet;
+    color: black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 20px;
     margin: 0;
@@ -16,6 +16,7 @@ h1, h2 {
 h1 {
     font-size: 2em;
     margin-bottom: 20px;
+    
 }
 
 h2 {
@@ -38,22 +39,28 @@ h2 {
     justify-content: space-around;
     gap: 20px;
     padding: 20px;
+ 
 }
+
 
 fieldset {
     text-align: left;
     min-height: 260px;
-    width: 280px;
+    width: 300px;
     background-color: white;
     border: 1px solid #4b0082;
     border-radius: 8px;
     padding: 15px;
+    height:300px;
 }
-
+fieldset:hover{
+    background-color: #5aa9e6;
+    color: white;
+}
 legend {
     font-weight: bold;
     font-size: 1.1em;
-    color: blueviolet;
+    color: black;
     padding: 0 10px;
 }
 
@@ -76,7 +83,10 @@ legend {
     border: 1px solid #4b0082;
    
 }
-
+.bb:hover{
+    background-color: #5aa9e6;
+    color: white;
+}
 button {
     display: block;
     margin: 30px auto 0 auto;
